; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_trace-device.c_fz_trace_clip_stroke_text.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_trace-device.c_fz_trace_clip_stroke_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32* }

@.str = private unnamed_addr constant [18 x i8] c"<clip_stroke_text\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c">\0A\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"</clip_stroke_text>\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32, i32)* @fz_trace_clip_stroke_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_trace_clip_stroke_text(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_2__*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = bitcast i32* %15 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %16, %struct.TYPE_2__** %13, align 8
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  store i32* %19, i32** %14, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %14, align 8
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @fz_trace_indent(i32* %20, i32* %21, i64 %24)
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %14, align 8
  %28 = call i32 @fz_write_printf(i32* %26, i32* %27, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %29 = load i32*, i32** %7, align 8
  %30 = load i32*, i32** %14, align 8
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @fz_trace_matrix(i32* %29, i32* %30, i32 %31)
  %33 = load i32*, i32** %7, align 8
  %34 = load i32*, i32** %14, align 8
  %35 = call i32 @fz_write_printf(i32* %33, i32* %34, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %36 = load i32*, i32** %7, align 8
  %37 = load i32*, i32** %14, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = add nsw i64 %41, 1
  %43 = call i32 @fz_trace_text(i32* %36, i32* %37, i32* %38, i64 %42)
  %44 = load i32*, i32** %7, align 8
  %45 = load i32*, i32** %14, align 8
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = call i32 @fz_trace_indent(i32* %44, i32* %45, i64 %48)
  %50 = load i32*, i32** %7, align 8
  %51 = load i32*, i32** %14, align 8
  %52 = call i32 @fz_write_printf(i32* %50, i32* %51, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %53 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = add nsw i64 %55, 1
  store i64 %56, i64* %54, align 8
  ret void
}

declare dso_local i32 @fz_trace_indent(i32*, i32*, i64) #1

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*) #1

declare dso_local i32 @fz_trace_matrix(i32*, i32*, i32) #1

declare dso_local i32 @fz_trace_text(i32*, i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
